--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "three": "^0.167.0"
+    "three": "^0.167.0",
+    "three-subdivide": "^1.1.5"
   },
   "devDependencies": {
     "@types/three": "^0.167.1",
